# adventofcode-c

./: CMakeLists.txt  CppCheckSuppressions.txt  README.md  build.sh
include/: Base.h  Day1.h  Day10.h  Day11.h  Day12.h  Day13.h  Day14.h  Day15.h  Day16.h  Day17.h  Day18.h  Day2.h  Day3.h  Day4.h  Day5.h  Day6.h  Day7.h  Day8.h  Day9.h
src/: Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp  Runner.cpp
test/: Base.cpp  Day1.cpp  Day10.cpp  Day11.cpp  Day12.cpp  Day13.cpp  Day14.cpp  Day15.cpp  Day16.cpp  Day17.cpp  Day18.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Day8.cpp  Day9.cpp
